# Career-Agent

./: .gitignore  README.md  pyproject.toml
2_content/: agent.ipynb  agent.py  agent_tools.py
3_linkedln/: LinkedlnProfileWebsite.txt
4_deployment/: README.md  agent.py  agent_tools.py
contents/: agent.ipynb  agent_tools.py
setup/: pyproject.toml
