[project]
name = "career-agent"
version = "0.1.0"
description = "Career Agent environment managed with uv"
requires-python = ">=3.12"

dependencies = [
    "gradio>=5.22.0",
    "openai>=1.68.2",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "openai-agents>=0.0.15",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]